@startuml
hide circle
skinparam classAttributeIconSize 0

class APIGateway {
}

class TableTypeController {
    - _tableTypeRepositories: ITableTypeRepositories
    + GetAllTableTypes(): Task<IActionResult>
}

interface ITableTypeRepositories<<interface>>  {
    + GetAllTableTypes(): Task<List<GetTableTypeResponseDTO>>
}

class TableTypeRepositories {
    - _tableTypeDao: TableTypeDAO
    + GetAllTableTypes(): Task<List<GetTableTypeResponseDTO>>
}

class TableTypeDAO {
    - _client.From<TableType> : ISupabaseTable<TableType>    
    + GetAllTableTypes(): Task<List<GetTableTypeResponseDTO>>
}

class TableType {
    + Id: Guid
    + Name: string
    + Description: string
    + PriceByHour: decimal
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

APIGateway -- TableTypeController
TableTypeController -- ITableTypeRepositories
ITableTypeRepositories <|-- TableTypeRepositories
TableTypeRepositories "1"--"1..*" TableTypeDAO
TableTypeDAO "1"--"0..*" TableType

@enduml
